Switch source URL to https
Signed-off-by: Patrick McCarty <patrick.mccarty@intel.com>

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = usermode
-url = http://releases.pagure.org/usermode/usermode-1.113.tar.xz
+url = https://releases.pagure.org/usermode/usermode-1.113.tar.xz
 archives = 
 giturl = 
 
