usermode: Autospec creation for update from version 1.113 to version 1.114
Jiri Kucera (9):
      Update translations from Zanata
      Fix typo
      Update ChangeLog
      Fix covscan issues
      Adjust GTK conditionals
      Remove mercurial relicts
      Remove Zanata config
      Update ChangeLog
      Release usermode-1.114

Petr Lautrbach (1):
      Do not use deprecated flask.h and av_permissions.h

Robert Scheck (1):
      Introduce --without-gtk to optionally disable GTK functionality

Tom Stellard (1):
      Link against -lm when builder userhelper

1.114:
* Introduced --without-gtk option to ./configure to optionally disable GTK
  functionality.
* Fixed typo in pam-panel-icon manual page.
* Updated translations.

--- a/options.conf
+++ b/options.conf
@@ -1,8 +1,8 @@
 [package]
 name = usermode
-url = https://releases.pagure.org/usermode/usermode-1.113.tar.xz
+url = https://releases.pagure.org/usermode/usermode-1.114.tar.xz
 archives = 
-giturl = 
+giturl = https://pagure.io/usermode.git
 domain = 
 alias = 
 
